manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "jmkub-258c"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "jmkub-258c"
  template:
    metadata:
      labels:
        app: "jmkub-258c"
    spec:
      containers:
        - name: "jmkub-258c"
          image: "dockerjmimages.azurecr.io/jmkub"
          ports:
          - containerPort: 80
